Code style fixups.
Added logger, removed some redundant variables.