@@ -19,8 +19,9 @@ import javafx.scene.control.ToggleButton;
 import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
-import javafx.scene.input.MouseEvent;
 import javafx.stage.Stage;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.controlsfx.control.RangeSlider;
 import seng202.team5.models.Wine;
 import seng202.team5.repository.VineyardDAO;
@@ -68,9 +69,6 @@ public class DataListPageController extends PageController {
     @FXML
     private TableColumn<Wine, Double> ratingColumn;
 
-    @FXML
-    private TableColumn<Wine, Boolean> favouriteColumn;
-
 
     @FXML
     private TextField searchTextField;
@@ -85,6 +83,7 @@ public class DataListPageController extends PageController {
     private double minRatingFilter;
     private double maxRatingFilter;
     private boolean favouriteFilter;
+    private static final Logger log = LogManager.getLogger(DataListPageController.class);
 
     /**
      * Initializes the data List by calling {@link seng202.team5.services.WineService}
@@ -122,7 +121,7 @@ public class DataListPageController extends PageController {
                     Wine selectedWine = wineTable.getSelectionModel().getSelectedItem();
                     if (selectedWine != null) {
                         WineService.getInstance().setSelectedWine(selectedWine);
-                        openDetailedViewPage(selectedWine);
+                        openDetailedViewPage();
                     }
                 } catch (Exception e) {
                     throw new RuntimeException(e);
@@ -164,19 +163,19 @@ public class DataListPageController extends PageController {
         List<String> yearOptions = wineDAO.getYear();
         ObservableList<String> observableYearList =
                 FXCollections.observableArrayList(yearOptions);
-        observableYearList.add(0, "Year");
+        observableYearList.addFirst("Year");
         yearComboBox.setItems(observableYearList);
 
         List<String> regionOptions = vineyardDAO.getRegions();
         ObservableList<String> observableRegionsList =
                 FXCollections.observableArrayList(regionOptions);
-        observableRegionsList.add(0, "Region");
+        observableRegionsList.addFirst("Region");
         regionComboBox.setItems(observableRegionsList);
 
         List<String> varietyOptions = wineDAO.getVariety();
         ObservableList<String> observableVarietyList =
                 FXCollections.observableArrayList(varietyOptions);
-        observableVarietyList.add(0, "Variety");
+        observableVarietyList.addFirst("Variety");
         varietyComboBox.setItems(observableVarietyList);
     }
 
@@ -244,7 +243,7 @@ public class DataListPageController extends PageController {
      */
     public void onVarietyComboBoxClicked() {
         String selectedVariety = String.valueOf(varietyComboBox.getValue());
-        if (!(selectedVariety == "Variety" || selectedVariety == null)) {
+        if (!(Objects.equals(selectedVariety, "Variety") || selectedVariety == null)) {
             varietyFilter = selectedVariety;
         }
         System.out.println(varietyFilter);
@@ -268,7 +267,7 @@ public class DataListPageController extends PageController {
     public void onYearComboBoxClicked() {
         //TODO: come back to - string vs int
         String selectedYear = String.valueOf(yearComboBox.getValue());
-        if (!(selectedYear == "Year" || selectedYear == null)) {
+        if (!(Objects.equals(selectedYear, "Year") || selectedYear == null)) {
             yearFilter = selectedYear;
         }
         applySearchFilters();
@@ -280,7 +279,7 @@ public class DataListPageController extends PageController {
      */
     public void onFavToggleButtonClicked() {
         boolean isFavourited = favToggleButton.isSelected();
-        if (isFavourited != false) {
+        if (isFavourited) {
             favouriteFilter = true;
         }
         applySearchFilters();
@@ -297,9 +296,9 @@ public class DataListPageController extends PageController {
         setDefaults();
         ObservableList<Wine> observableWines = FXCollections.observableArrayList(wineDAO.getAll());
         wineTable.setItems(observableWines);
-        varietyComboBox.setValue(varietyComboBox.getItems().get(0));
-        regionComboBox.setValue(regionComboBox.getItems().get(0));
-        yearComboBox.setValue(yearComboBox.getItems().get(0));
+        varietyComboBox.setValue(varietyComboBox.getItems().getFirst());
+        regionComboBox.setValue(regionComboBox.getItems().getFirst());
+        yearComboBox.setValue(yearComboBox.getItems().getFirst());
 
         favToggleButton.setSelected(false);
     }
@@ -307,9 +306,8 @@ public class DataListPageController extends PageController {
     /**
      * Opens detailed wine view page for the wine that was double-clicked.
      *
-     * @param selectedWine the currently selected wine
      */
-    private void openDetailedViewPage(Wine selectedWine) {
+    private void openDetailedViewPage() {
         try {
             FXMLLoader loader = new FXMLLoader(
                     getClass().getResource("/fxml/DetailedViewPage.fxml"));
@@ -325,8 +323,7 @@ public class DataListPageController extends PageController {
             stage.setScene(scene);
             stage.show();
         } catch (Exception e) {
-            System.out.println(e);
-            e.printStackTrace();
+            log.error(e);
         }
     }
 
